# competitive-programming-review

./: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  manage.sh
.github/workflows/: ci.yml
config/: init.sql
migrations/2020-11-01-104817_create_tables/: down.sql  up.sql
src/: auth.rs  authentication.rs  config.rs  error.rs  main.rs  middleware.rs  schema.rs  utils.rs
src/db/: connect.rs
src/model/: mod.rs  review.rs  reviews.rs  user.rs
src/users/: handler.rs  infrastructures.rs  mod.rs  model.rs  sign_up.rs
tests/: env.sh  users_test.rs
tests/redis/: dump.rdb
