[package]
name = "competitive-programming-review"
version = "0.1.0"
authors = ["granddaifuku"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
anyhow = "1.0.40"
chrono = "0.4.19"
tokio = { version = "0.2.9", features = [ "full" ] }
sqlx = { version = "0.5.2", features = [ "postgres", "chrono", "runtime-tokio-rustls" ] }
