[package]
name = "competitive-programming-review"
version = "0.1.0"
authors = ["granddaifuku"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
anyhow = "1.0.40"
chrono = "0.4.19"
tokio = { version = "0.2.9", features = [ "full" ] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5.2", features = [ "postgres", "chrono", "runtime-tokio-rustls", "uuid"] }
derive_more = "0.99.14"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
validator = { version = "0.13.0", features = ["derive"] }
actix-rt = "2.2.0"
lazy_static = "1.4.0"
regex = "1.5.4"
