[package]
name = "competitive-programming-review"
version = "0.1.0"
authors = ["granddaifuku"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
anyhow = "1.0.43"
chrono = "0.4.19"
tokio = { version = "0.2.21", features = [ "full" ] }
serde = { version = "1.0.127", features = ["derive"] }
sqlx = { version = "0.4.2", features = [ "postgres", "chrono", "runtime-tokio-rustls", "uuid"] }
derive_more = "0.99.16"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
validator = { version = "0.14.0", features = ["derive"] }
actix-rt = "1.1"
lazy_static = "1.4.0"
regex = "1.5.4"
bcrypt = "0.10.1"
lettre = "0.10.0-rc.3"
serde_json = "1.0.66"
actix-session = "0.4.1"
actix-identity = "0.3.1"
actix-redis = "0.9.2"
rand = "0.8.4"
rand_core = "0.6.3"
base64 = "0.13.0"
